--- a/jcjtheme/index.hbs
+++ b/jcjtheme/index.hbs
@@ -3,9 +3,12 @@
 <main class="main_jcj" role="main">
 {{#foreach posts}}
 <article class="article_jcj" role="article" itemscope itemtype="http://schema.org/Article">
-<time class="date_jcj" datetime="{{date format="YYYY-MM-DD"}}" itemprop="datePublished">{{date format='DD MMM YYYY'}}</time><br/>
-<time class="date_jcj" datetime="{{date format="YYYY-MM-DD"}}" itemprop="datePublished">{{date format='dddd'}}</time>
 <div class="thispost">
+<div class="dateinline">
+<time class="date_jcj" datetime="{{date format="YYYY-MM-DD"}}" itemprop="datePublished">{{date format='DD'}}</time>
+<time class="date_jcj2" datetime="{{date format="YYYY-MM-DD"}}" itemprop="datePublished">{{date format='dddd'}}</time><br/>
+<time class="date_jcj1" datetime="{{date format="YYYY-MM-DD"}}" itemprop="datePublished">{{date format='MMM YYYY'}}</time>
+</div>
 <header class="postheader_jcj">
 <h1 class="posttitle_jcj" itemprop="headline"><a href="{{{url}}}" rel="bookmark">{{title}}</a></h1>
 </header>
